donr frontend for page 'respawn'

--- a/src/html/level.html
+++ b/src/html/level.html
@@ -1,92 +1,31 @@
 <div class="flex_container">
     <div>
         <img
-            src="https://bit.ly/3aPVuST"
-            class="my_avator Avators"
+        src="https://bit.ly/3aPVuST"
+        class="my_avator Avators"
+        style="margin-top: 50px;"
         />
     </div>
     <div>
-        <!-- my abilities -->
-        <p class="centered" style="margin-bottom: 0;">挑戰者</p>
-        <h2 class="my_name centered" style="margin-top: 4px;">玩家暱稱</h2>
-        <table id="my_info" class="infobox">
-            <tr>
-                <th>等級</th>
-                <th class="my_level">49</th>
-            </tr>
-            <tr>
-                <td>生命值</td>
-                <td class="my_hp">77749</td>
-            </tr>
-            <tr>
-                <td>攻擊力</td>
-                <td class="my_atk">77749</td>
-            </tr>
-            <tr>
-                <td>防禦力</td>
-                <td class="my_def">77749</td>
-            </tr>
-            <tr>
-                <td>敏捷度</td>
-                <td class="my_agi">77749</td>
-            </tr>
-            <tr>
-                <td>體力值</td>
-                <td class="my_str">77749</td>
-            </tr>
-            <tr>
-                <td>技巧值</td>
-                <td class="my_skl">77749</td>
-            </tr>
-            <tr>
-                <td>幸運值</td>
-                <td class="my_luk">77749</td>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <!-- boss' abilities -->
-        <p class="centered" style="margin-bottom: 0;">關主</p>
-        <h2 class="boss_name centered" style="margin-top: 4px;">關主暱稱</h2>
-        <table id="boss_info" class="infobox">
-            <tr>
-                <th>等級</th>
-                <th class="boss_level">49</th>
-            </tr>
-            <tr>
-                <td>生命值</td>
-                <td class="boss_hp">77749</td>
-            </tr>
-            <tr>
-                <td>攻擊力</td>
-                <td class="boss_atk">77749</td>
-            </tr>
-            <tr>
-                <td>防禦力</td>
-                <td class="boss_def">77749</td>
-            </tr>
-            <tr>
-                <td>敏捷度</td>
-                <td class="boss_agi">77749</td>
-            </tr>
-            <tr>
-                <td>體力值</td>
-                <td class="boss_str">77749</td>
-            </tr>
-            <tr>
-                <td>技巧值</td>
-                <td class="boss_skl">77749</td>
-            </tr>
-            <tr>
-                <td>幸運值</td>
-                <td class="boss_luk">77749</td>
-            </tr>
-        </table>
+        <div class="flex_container" style="width: 570px; margin: 0 auto;">
+            <div style="flex-grow: 1;">
+                <p class="centered" style="margin-bottom: 0;">挑戰者</p>
+                <h2 class="my_name centered" style="margin-top: 4px;">玩家暱稱</h2>
+            </div>
+            <div style="flex-grow: 1;">
+                <p class="centered" style="margin-bottom: 0;">關主</p>
+                <h2 class="boss_name centered" style="margin-top: 4px;">關主暱稱</h2>
+            </div>
+        </div>
+        <div>
+            <table id="boss_match_info" class="infobox"></table>
+        </div>
     </div>
     <div>
         <img
             src="https://bit.ly/3aPVuST"
             class="boss_avator Avators"
+            style="margin-top: 50px;"
         />
     </div>
 </div>
