--- a/src/html/level.html
+++ b/src/html/level.html
@@ -36,12 +36,12 @@
 </div>
 <div class="flex_container">
     <div id="boss_match_result_box" hidden>
-        <h2 class="centered" id="boss_match_result_title">挑戰結果</h2>
+        <h2 class="centered match_result_title" id="boss_match_result_title">挑戰結果</h2>
         <ol id="boss_match_result_list">
             <li><span style="color: magenta">喵喵喵</span>使出了 <span style="color: blue;">owo</span></li>
             <li><span style="color: magenta">喵喵喵</span>又使出了 <span style="color: blue;">owo</span></li>
         </ol>
-        <ul id="boss_match_result_summary">
+        <ul class="match_result_summary" id="boss_match_result_summary">
             <li>挑戰者<span style="color: magenta">喵喵喵</span>勝利</li>
             <li>你獲得了87點經驗值</li>
         </ul>
