finished functionalities in page myholo

--- a/src/html/level.html
+++ b/src/html/level.html
@@ -1,8 +1,8 @@
 <div class="flex_container">
     <div>
         <img
-        src="https://bit.ly/3aPVuST"
-        class="my_avator Avators"
+        src="../assets/avatars/nacho.jpg"
+        class="my_avatar Avatars"
         style="margin-top: 50px;"
         />
     </div>
@@ -23,8 +23,8 @@
     </div>
     <div>
         <img
-            src="https://bit.ly/3aPVuST"
-            class="boss_avator Avators"
+            src="../assets/avatars/nacho.jpg"
+            class="boss_avatar Avatars"
             style="margin-top: 50px;"
         />
     </div>
