--- a/src/html/myholo.html
+++ b/src/html/myholo.html
@@ -1,9 +1,9 @@
 <div class="flex_container">
-    <!-- playaer avator & motto (no function for now) -->
+    <!-- playaer avatar & motto (no function for now) -->
     <div style="width: 250px">
         <img
             src="https://bit.ly/3aPVuST"
-            class="my_avator Avators"
+            class="my_avatar Avatars"
         />
         <h2 class="my_name centered">玩家暱稱</h2>
         <p
@@ -98,5 +98,10 @@
                 <td>1 min</td>
             </tr>
         </table>
+        <p class="my_stream_cd" hidden>
+            直播冷卻：
+            <span class="my_stream_cd_value"></span>
+            秒
+        </p>
     </div>
 </div>
