--- a/src/html/record.html
+++ b/src/html/record.html
@@ -27,7 +27,7 @@
                 <div>
                     <img
                     src="https://bit.ly/3aPVuST"
-                    class="rec_my_avator Avators"
+                    class="rec_my_avatar Avatars"
                     style="margin-top: 50px;"
                     />
                 </div>
@@ -115,7 +115,7 @@
                 <div>
                     <img
                         src="https://bit.ly/3aPVuST"
-                        class="rec_opp_avator Avators"
+                        class="rec_opp_avatar Avatars"
                         style="margin-top: 50px;"
                     />
                 </div>
