--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <li id="nav_home" class="NavTarget">關於</li>
             <li id="nav_my" class="NavTarget">我的HOLO</li>
             <li id="nav_lvl" class="NavTarget">樓層挑戰</li>
-            <li id="nav_resp" class="NavTarget">轉生系統</li>
+            <li id="nav_resp" class="NavTarget">畢業系統</li>
             <li id="nav_adv" class="NavTarget">成就列表</li>
             <li id="nav_rec" class="NavTarget">挑戰紀錄</li>
             <li id="nav_dev" class="NavTarget ActiveLavalamp">測試工具</li>
@@ -46,6 +46,7 @@
                 <p>Under construction💤...</p>
                 <p><code>Ctrl + Shift + I</code> to toggle dev tools.</p>
                 <button onclick="ping()">ping...</button>
+                <button onclick="owo()">owo!</button>
             </div>
             <div id="pg_my" class="Page" hidden>
                 <div id="pg_my_container"></div>
