--- a/src/html/respawn.html
+++ b/src/html/respawn.html
@@ -6,11 +6,11 @@
 <hr style="width: 1200px;">
 
 <div class="flex_container">
-    <!-- new character avator -->
+    <!-- new character avatar -->
     <div>
         <img
         src="https://bit.ly/3aPVuST"
-        class="resp_avator Avators"
+        class="resp_avatar Avatars"
         style="margin: 100px 50px;"
         />
     </div>
@@ -31,5 +31,5 @@
 
     <!-- dummy div for spacing -->
     <!-- not sure if it's a good practice (probably not) -->
-    <div class="Avators" style="margin: 100px 50px; opacity: 0%"></div>
+    <div class="Avatars" style="margin: 100px 50px; opacity: 0%"></div>
 </div>
