finished functionalities of page level

--- a/src/html/level.html
+++ b/src/html/level.html
@@ -35,12 +35,18 @@
     </div>
 </div>
 <div class="flex_container">
-    <div id="boss_match_result_box" hidden>
+    <div id="boss_match_result_box"> <!-- hidden -->
         <h2 class="centered match_result_title" id="boss_match_result_title">挑戰結果</h2>
-        <ol id="boss_match_result_list">
+        <ul class="match_result_summary" id="boss_match_result_heading">
+            <li>挑戰者<span style="color: magenta">喵喵喵</span>勝利</li>
+            <li>你獲得了87點經驗值</li>
+        </ul>
+        <hr>
+        <ol class="match_result_list" id="boss_match_result_list">
             <li><span style="color: magenta">喵喵喵</span>使出了 <span style="color: blue;">owo</span></li>
             <li><span style="color: magenta">喵喵喵</span>又使出了 <span style="color: blue;">owo</span></li>
         </ol>
+        <hr>
         <ul class="match_result_summary" id="boss_match_result_summary">
             <li>挑戰者<span style="color: magenta">喵喵喵</span>勝利</li>
             <li>你獲得了87點經驗值</li>
