finish respawn system

--- a/src/html/respawn.html
+++ b/src/html/respawn.html
@@ -25,7 +25,8 @@
         <table id="resp_abilities" class="abilitybox" style="width: 400px;"></table>
         <p class="centered">剩餘轉生點數：<span class="resp_credit">tk77749</span></p>
         <div class="flex_container">
-            <button style="width: 150px; font-size: 22px;">確認轉生</button>
+            <button style="width: 150px; font-size: 22px;" onclick="resetRespAbil();">重置點數</button>
+            <button style="width: 150px; font-size: 22px;" onclick="doResp();">確認轉生</button>
         </div>
     </div>
 
