fixed several bugs (broken relative paths mainly)

--- a/src/html/myholo.html
+++ b/src/html/myholo.html
@@ -15,6 +15,7 @@
                 text-align: center;
             "
             id="my_motto"
+            hidden
         >
             速く！もっと速く！
         </p>
