--- a/src/html/record.html
+++ b/src/html/record.html
@@ -35,7 +35,7 @@
                 <div>
                     <img
                         src="https://bit.ly/3aPVuST"
-                        class="rec_my_avatar Avatars"
+                        class="rec_atk_avatar Avatars"
                         style="margin-top: 50px"
                     />
                 </div>
@@ -76,7 +76,7 @@
                 <div>
                     <img
                         src="https://bit.ly/3aPVuST"
-                        class="rec_opp_avatar Avatars"
+                        class="rec_def_avatar Avatars"
                         style="margin-top: 50px"
                     />
                 </div>
