--- a/src/html/record.html
+++ b/src/html/record.html
@@ -6,8 +6,13 @@
                 <th class="rec_list_time">挑戰時間</th>
                 <th class="rec_list_opp">對手</th>
             </tr>
-            <tr style="height: 10px;"></tr>
-            <tr class="rec_data rec_row_overview" id="rec_row_48763" onclick="doSelectEntry(48763)">
+            <tr style="height: 10px"></tr>
+            <tr
+                class="rec_data rec_row_overview"
+                id="rec_row_48763"
+                onclick="doSelectMatchRecord(48763)"
+                hidden
+            >
                 <td class="rec_list_time"></td>
                 <td class="rec_list_opp">(Overview)</td>
             </tr>
@@ -17,87 +22,43 @@
     <!-- match record -->
     <div id="record_container">
         <!-- overview mode -->
-        <div hidden>(under construction💤)</div>
+        <div id="overview_container" hidden>
+        </div>
 
         <!-- single match mode -->
-        <div>
-            <p class="centered">2022/10/11 03:14:00</p>
-            <p class="centered">對戰結果：勝利</p>
+        <div id="match_container" hidden>
+            <p class="centered rec_match_time">2022/10/11 03:14:00</p>
+            <p class="centered">
+                對戰結果：<span class="rec_match_result">勝利</span>
+            </p>
             <div class="flex_container">
                 <div>
                     <img
-                    src="https://bit.ly/3aPVuST"
-                    class="rec_my_avatar Avatars"
-                    style="margin-top: 50px;"
+                        src="https://bit.ly/3aPVuST"
+                        class="rec_my_avatar Avatars"
+                        style="margin-top: 50px"
                     />
                 </div>
-                <div style="width: 570px;">
+                <div style="width: 570px">
                     <table id="rec_match_info" class="infobox">
                         <tr>
-                            <th>玩家暱稱</th>
+                            <th class="rec_atk_name">玩家暱稱</th>
                             <th class="colored">→</th>
-                            <th>對手暱稱</th>
+                            <th class="rec_def_name">對手暱稱</th>
                         </tr>
                         <tr>
-                            <th>nachoneko</th>
+                            <th class="rec_atk_char">nachoneko</th>
                             <th class="colored">角色</th>
-                            <th>nachoneko</th>
+                            <th class="rec_def_char">nachoneko</th>
                         </tr>
                         <tr>
-                            <th>69</th>
+                            <th class="rec_atk_level">69</th>
                             <th class="colored">等級</th>
-                            <th>69</th>
-                        </tr>
-                        <tr>
-                            <td>666</td>
-                            <td class="colored">能力值</td>
-                            <td>666</td>
-                        </tr>
-                        <tr>
-                            <td>666</td>
-                            <td class="colored">能力值</td>
-                            <td>666</td>
-                        </tr>
-                        <tr>
-                            <td>666</td>
-                            <td class="colored">能力值</td>
-                            <td>666</td>
-                        </tr>
-                        <tr>
-                            <td>666</td>
-                            <td class="colored">能力值</td>
-                            <td>666</td>
-                        </tr>
-                        <tr>
-                            <td>666</td>
-                            <td class="colored">能力值</td>
-                            <td>666</td>
-                        </tr>
-                        <tr>
-                            <td>666</td>
-                            <td class="colored">能力值</td>
-                            <td>666</td>
-                        </tr>
-                        <tr>
-                            <td>666</td>
-                            <td class="colored">能力值</td>
-                            <td>666</td>
+                            <th class="rec_def_level">69</th>
                         </tr>
                     </table>
-                    <div class="flex_container">
-                        <div class="match_result_box">
-                            <ol class="match_result_list">
-                                <li><span style="color: magenta">喵喵喵</span>使出了 <span style="color: blue;">owo</span></li>
-                                <li><span style="color: magenta">喵喵喵</span>又使出了 <span style="color: blue;">owo</span></li>
-                            </ol>
-                            <ul class="match_result_summary">
-                                <li>挑戰者<span style="color: magenta">喵喵喵</span>勝利</li>
-                                <li>你獲得了87點經驗值</li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
-                <div hidden>
+                <!-- <div hidden>
                     <div class="flex_container" style="width: 570px; margin: 0 auto;">
                         <div style="flex-grow: 1;">
                             <p class="centered" style="margin-bottom: 0;">挑戰者</p>
@@ -111,13 +72,31 @@
                     <div>
                         <table id="_rec_match_info" class="infobox"></table>
                     </div>
-                </div>
+                </div> -->
                 <div>
                     <img
                         src="https://bit.ly/3aPVuST"
                         class="rec_opp_avatar Avatars"
-                        style="margin-top: 50px;"
+                        style="margin-top: 50px"
                     />
+                </div>
+            </div>
+            <div class="flex_container">
+                <div id="rec_match_result_box">
+                    <ul
+                        class="match_result_summary"
+                        id="rec_match_result_heading"
+                    ></ul>
+                    <hr />
+                    <ol
+                        class="match_result_list"
+                        id="rec_match_result_list"
+                    ></ol>
+                    <hr />
+                    <ul
+                        class="match_result_summary"
+                        id="rec_match_result_summary"
+                    ></ul>
                 </div>
             </div>
         </div>
