feat(game): added resetting game progress
added option to reset all game progress. added options page to app.

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -1,6 +1,9 @@
-<p>MyHolo Game</p>
-<p>version: 0.1</p>
-<p>Under construction💤...</p>
-<p><code>Ctrl + Shift + I</code> to toggle dev tools.</p>
-<button onclick="console.log('owo')">owo!</button>
-<button onclick="toggleDimmed()">owowo!</button>
+<div class="flex_container" style="flex-flow: column; text-align: center">
+    <div class="flex_container">
+        <div id="popup" class="hidden">meowmeowmeowmeow!!!!!!</div>
+    </div>
+    <h2>MyHolo <span class="app_version"></span></h2>
+    <div>
+        <button class="danger" onclick="doResetAll();">重設遊戲進度</button>
+    </div>
+</div>
