--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
             MyHolo<span onclick="tryDebugMode();">&nbsp;</span><span class="app_version"></span>
         </h1>
         <ul id="navList">
-            <li id="nav_home" class="NavTarget debug">關於</li>
+            <li id="nav_home" class="NavTarget">關於</li>
             <li id="nav_my" class="NavTarget">我的HOLO</li>
             <li id="nav_lvl" class="NavTarget">樓層挑戰</li>
             <li id="nav_resp" class="NavTarget">畢業系統</li>
@@ -44,11 +44,11 @@
             <p class="centered" id="dead_banner" hidden>你的 VTuber 慘遭炎上，請畢業轉生</p>
         </div>
         <div id="pages_container">
-            <!-- <div id="pg_home" class="Page" hidden>
+            <div id="pg_home" class="Page" hidden>
                 <div id="pg_home_container"></div>
                 <link type="text/css" rel="stylesheet" href="css/home.css">
                 <script defer src="js/home.js"></script>
-            </div> -->
+            </div>
             <div id="pg_my" class="Page" hidden>
                 <div id="pg_my_container"></div>
                 <link type="text/css" rel="stylesheet" href="css/myholo.css" />
