feat: added skills display
now character skills display on respawn page and match log

--- a/src/html/myholo.html
+++ b/src/html/myholo.html
@@ -2,7 +2,7 @@
     <!-- playaer avatar & motto (no function for now) -->
     <div style="width: 250px">
         <img src="https://bit.ly/3aPVuST" class="my_avatar Avatars" />
-        <p id="my_motto" class="motto">速く！もっと速く！</p>
+        <p class="my_motto motto">速く！もっと速く！</p>
     </div>
     <!-- player info box -->
     <div>
