--- a/src/html/respawn.html
+++ b/src/html/respawn.html
@@ -22,6 +22,7 @@
             LV <span class="resp_level" style="font-size: inherit;">1</span>
             <span class="resp_char" style="font-size: inherit;">なちょ猫</span>
         </p>
+        <p class="resp_motto motto"></p>
         <table id="resp_abilities" class="abilitybox" style="width: 400px;"></table>
         <p class="centered">剩餘轉生點數：<span class="resp_credit">tk77749</span></p>
         <div class="flex_container">
@@ -32,5 +33,9 @@
 
     <!-- dummy div for spacing -->
     <!-- not sure if it's a good practice (probably not) -->
-    <div class="Avatars" style="margin: 100px 50px; opacity: 0%"></div>
+    <div style="margin: 100px 50px; width: 150px;">
+        <table id="resp_skills" class="infobox" style="border: none;">
+            <tr><th style="border: none; padding: 10px;">角色技能</th></tr>
+        </table>
+    </div>
 </div>
